<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="78dp"
        android:layout_height="75dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/sdcard"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/lifeCycleButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/webServiceButton"
        android:layout_width="78dp"
        android:layout_height="75dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/download"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/permissionButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/permissionButton"
        android:layout_width="78dp"
        android:layout_height="75dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/phone"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/lifeCycleButton"
        android:layout_width="78dp"
        android:layout_height="75dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="94dp"
        android:background="@color/colorPrimary"
        android:foreground="@drawable/message"
        android:foregroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="255dp"
        android:layout_height="106dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isen" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="2dp"
        android:text="@string/hello"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lifeCycle"
        app:layout_constraintEnd_toEndOf="@+id/lifeCycleButton"
        app:layout_constraintStart_toStartOf="@+id/lifeCycleButton"
        app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="9dp"
        android:text="@string/permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionButton" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="9dp"
        android:text="@string/webService"
        app:layout_constraintStart_toEndOf="@+id/permissionButton"
        app:layout_constraintTop_toBottomOf="@+id/webServiceButton" />

    <Button
        android:id="@+id/disconnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/disconnection"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>